KIBON-1763: add argLine param