@@ -926,10 +926,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <useModulePath>false</useModulePath>
                     <redirectTestOutputToFile>false</redirectTestOutputToFile>
                     <!--port offset fuer embedded wildfly -->
-                    <argLine>-Djboss.socket.binding.port-offset=10000</argLine>
+                    <argLine>
+                        -Djboss.socket.binding.port-offset=10000
+                        --illegal-access=permit
+                    </argLine>
                     <environmentVariables>
                         <!--suppress UnresolvedMavenProperty -->
                         <JBOSS_HOME>${jbossHome}</JBOSS_HOME>
